--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/assets/logo-color-removebg-preview.png" />
+    <link rel="shortcut icon" href="/src/assets/logo-color-removebg-preview.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EleganceEnsemble</title>
   </head>
